product page updated

--- a/Pages/product_page.html
+++ b/Pages/product_page.html
@@ -36,11 +36,11 @@
                     </span>
                 </div>
                 <p>
-                    <span class="description">
-                        The Nothing Phone (1) boasts an elegant style that comes to life with beautiful symbols to enable an enriched connection between you and your device.
-                    </span>
+                    <div class="description">
+                        The Nothing Phone (1) boasts an elegant style that comes to life with beautiful symbols to enable an enriched connection between you and your device. Moreover, its simplistic design ensures that you are never out of the limelight wherever you go. The innovative Glyph Interface of the Nothing smartphone lays the path for a one-of-a-kind sort of communication. Furthermore, distinct light patterns alert you to incoming calls, app alerts, charging status, and other information. You can experience exceptional ruggedness and carry your phone with you on all of your excursions owing to the Dual-side Gorilla Glass featured in this smartphone. Furthermore, the sophisticated vibration motors included in this phone make touch reactions lifelike and provide an exceptional user experience. Moreover, this smartphone's proportional bezel and aluminium frame enhance beauty, portability, and longevity. Nothing OS offers a top-tier Android experience that focuses on performance and smoothness. Furthermore, Hardware and Software communicate in the same visual language, with customised widgets, fonts, noises, and backgrounds. Moreover, you can regulate third-party items from Quick Settings, keeping you protected from any possible dangers. This way, you can enjoy a seamless user experience without any bloatware.
+                    </div>
                 </p>
-                <button>
+                <button class="buy-now">
                     <span class="add-to-cart">Buy Now</span>
                 </button>
                 <button>
@@ -49,9 +49,9 @@
             </p>
             <div class="comment-section">
                 <h3 class="Comments">
-                    Comments
+                    Review Section
                 </h3>
-                <input class="comment-input" type="text">
+                <input class="comment-input" type="text" placeholder="Give us your review...">
                 <span>
                     <button>
                         <span class="comment-button">Post</span>
